--- a/Readiculous.WebApp/wwwroot/css/global.css
+++ b/Readiculous.WebApp/wwwroot/css/global.css
@@ -2,8 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-
-/* ================ */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
 /* Global Reset & Variables */
 /* ================ */
 * {
@@ -31,6 +30,7 @@
     --font-primary: 'Gentium Book Plus', serif;
     --font-secondary: 'Playfair Display', serif;
     --font-ui: 'Poppins', sans-serif;
+    --font-message: 'Noto Sans', sans-serif;
     /* Greyed Out Colors */
     --color-greyed-out-bg: #d6d8db;
     --color-greyed-out-text: #495057;
