[FIX] Favorite Book: Fixed an issue where Favorite Books erroneously map to FavoriteBookModels

--- a/Readiculous.WebApp/Views/Dashboard/DashboardScreen.cshtml
+++ b/Readiculous.WebApp/Views/Dashboard/DashboardScreen.cshtml
@@ -1,4 +1,4 @@
-﻿@model Readiculous.Services.ServiceModels.DashboardViewModel
+﻿@model Readiculous.Services.ServiceModels.UserDashboardViewModel
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
