--- a/Readiculous.WebApp/Views/Shared/_LogoutConfirmation.cshtml
+++ b/Readiculous.WebApp/Views/Shared/_LogoutConfirmation.cshtml
@@ -5,8 +5,8 @@
         <h3>Logout Confirmation</h3>
         <p>Are you sure you want to logout?</p>
         <div class="button-group">
-            <button id="confirmLogout" class="btn-confirm">Yes</button>
-            <button id="cancelLogout" class="btn-cancel">No</button>
+            <button id="confirmLogout" class="btn-confirm">Confirm</button>
+            <button id="cancelLogout" class="btn-cancel">Cancel</button>
         </div>
     </div>
 </div>
