--- a/Readiculous.WebApp/wwwroot/css/global.css
+++ b/Readiculous.WebApp/wwwroot/css/global.css
@@ -14,11 +14,11 @@
 :root {
     /* Color Scheme */
     --color-text: #2C2133;
-
     --color-header: #B089A5;
     --color-btn: #EDAEC0;
     --color-modal: #F8ECE9;
-    --color-background: linear-gradient(150deg, var(--color-text) 0%, #4A3542 35%, var(--color-secondary) 75%, var(--color-text) 100%);
+    /*--color-background: linear-gradient(150deg, var(--color-text) 0%, #4A3542 35%, var(--color-secondary) 75%, var(--color-text) 100%);*/
+    --color-background: #E1DACD;
     /* --color-background: #F2EFF1;*/
     --color-accent: #D4A5A5;
     --color-secondary: #8B5E83;
@@ -44,7 +44,8 @@
     --color-subtle-focus-border: #adb5bd;
     --color-subtle-focus-text: #495057;
     /* Dashboard Admin */
-    --color-header-bg: linear-gradient(150deg, var(--color-text) 0%, #4A3542 35%, var(--color-secondary) 75%, var(--color-text) 100%);
+    /* --color-header-bg: linear-gradient(150deg, var(--color-text) 0%, #4A3542 35%, var(--color-secondary) 75%, var(--color-text) 100%);*/
+    --color-header-bg: #B089A5;
     --color-nav-slider: rgba(139, 94, 131, 0.85);
     --color-text-light: #F5F5F5;
     --color-text-dark: #2C2133;
