--- a/Readiculous.WebApp/Views/UserMaster/_UserListPartial.cshtml
+++ b/Readiculous.WebApp/Views/UserMaster/_UserListPartial.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Readiculous.Services.ServiceModels.UserListItemViewModel>
+﻿@using X.PagedList
+@model X.PagedList.IPagedList<Readiculous.Services.ServiceModels.UserListItemViewModel>
 
 <table class="user-table">
     <thead>
