[FIX] IPageList UserMasters SortOrder

--- a/Readiculous.WebApp/Views/Shared/Components/Pagination/Default.cshtml
+++ b/Readiculous.WebApp/Views/Shared/Components/Pagination/Default.cshtml
@@ -27,6 +27,10 @@
     {
         routeValues["searchType"] = ViewData["searchType"];
     }
+    if (ViewData["sortOrder"] != null) 
+    {
+        routeValues["sortOrder"] = ViewData["sortOrder"];
+    }
 }
 
 <div class="pagination-container">
