[ADD] IPagelist for Genre Master

--- a/Readiculous.WebApp/Views/Shared/Components/Pagination/Default.cshtml
+++ b/Readiculous.WebApp/Views/Shared/Components/Pagination/Default.cshtml
@@ -31,6 +31,10 @@
     {
         routeValues["sortOrder"] = ViewData["sortOrder"];
     }
+    if (ViewData["genreFilter"] != null)
+    {
+        routeValues["genreFilter"] = ViewData["genreFilter"];
+    }
 }
 
 <div class="pagination-container">
