--- a/Readiculous.WebApp/Views/GenreMaster/GenreMasterScreen.cshtml
+++ b/Readiculous.WebApp/Views/GenreMaster/GenreMasterScreen.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Readiculous.Services.ServiceModels.GenreListItemViewModel>
+﻿@using X.PagedList
+@model IPagedList<Readiculous.Services.ServiceModels.BookListItemViewModel>
 @using Microsoft.AspNetCore.Mvc.Rendering
 
 @section Styles {
@@ -43,13 +44,18 @@
             </div>
         </div>
     </div>
-
-    <div class="row justify-content-center">
-        <div class="col-md-6 px-0 text-md-end">
-            @if (ViewBag.PaginationModel != null)
-            {
-                @await Component.InvokeAsync("Pagination", ViewBag.PaginationModel)
-            }
+    <div class="pagination-controls row mb-4 mx-0 justify-content-center">
+        <div class="col-md-6 px-0">
+            @await Component.InvokeAsync("Pagination", new {
+            currentPage = Model.PageNumber,
+                        totalPages = Model.PageCount,
+                        pageSize = Model.PageSize,
+                        totalItems = Model.TotalItemCount,
+                        action = ViewContext.RouteData.Values["action"]?.ToString(),
+                        controller = ViewContext.RouteData.Values["controller"]?.ToString(),
+                        searchString = ViewData["CurrentFilter"],
+                        sortOrder = ViewData["CurrentSortOrder"]
+                        })
         </div>
     </div>
 </div>
