[FIX] genre master ipagelsit

--- a/Readiculous.WebApp/Views/GenreMaster/GenreMasterScreen.cshtml
+++ b/Readiculous.WebApp/Views/GenreMaster/GenreMasterScreen.cshtml
@@ -1,5 +1,5 @@
 ﻿@using X.PagedList
-@model IPagedList<Readiculous.Services.ServiceModels.BookListItemViewModel>
+@model IPagedList<Readiculous.Services.ServiceModels.GenreListItemViewModel>
 @using Microsoft.AspNetCore.Mvc.Rendering
 
 @section Styles {
