--- a/Readiculous.WebApp/wwwroot/css/adminUserMaster/user-master.css
+++ b/Readiculous.WebApp/wwwroot/css/adminUserMaster/user-master.css
@@ -136,13 +136,14 @@
     height: 40px;
     border-radius: 50%;
     background-color: var(--color-border);
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
-    margin: 0 auto;
     color: var(--color-text);
-    font-size: 0.8rem;
 }
+    .profile-picture-placeholder i {
+        font-size: 1.5rem;
+    }
 
 /* Action Buttons */
 .action-buttons {
